# assignmentzoo

./: .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  style.css
.github/workflows/: ci.yaml  dockerhub.yaml
app/: main.py
app/api/routes/: api.py
app/core/: config.py  events.py
app/crud/: project.py
app/db/: base.py  models.py
app/frontend/: routes.py
app/schemas/: project.py
app/static/: style.css
app/templates/: index.html  submit.html
tests/: test_crud_project.py
